--- a/Dockerfile.cuda
+++ b/Dockerfile.cuda
@@ -1,5 +1,5 @@
-FROM nvidia/cuda:11.8.0-cudnn8-runtime-ubuntu22.04
-FROM python:3.10
+FROM nvidia/cuda:12.2.0-runtime-ubuntu20.04
+FROM python:3.11
 
 ARG FACEFUSION_VERSION=1.1.0
 
