--- a/requirements-docker.cuda.txt
+++ b/requirements-docker.cuda.txt
@@ -1,14 +1,14 @@
 gfpgan
-#gradio
-#insightface
-#numpy
-#onnx
-#onnxruntime-gpu
-#opencv-python
-#opennsfw2
-#pillow
-#protobuf
-#psutil
-#realesrgan
-#tensorflow
-#tqdm
+gradio
+insightface
+numpy
+onnx
+onnxruntime-gpu
+opencv-python
+opennsfw2
+pillow
+protobuf
+psutil
+realesrgan
+tensorflow
+tqdm
