--- a/Dockerfile.cuda
+++ b/Dockerfile.cuda
@@ -7,7 +7,7 @@ ENV GRADIO_SERVER_NAME=0.0.0.0
 WORKDIR /facefusion
 
 RUN apt-get update
-RUN apt-get upgrade -y pip
+RUN pip install --upgrade pip
 RUN apt-get install -y nvidia-container-toolkit-base
 RUN apt-get install -y ffmpeg
 
