--- a/Dockerfile.cuda
+++ b/Dockerfile.cuda
@@ -7,10 +7,11 @@ ENV GRADIO_SERVER_NAME=0.0.0.0
 WORKDIR /facefusion
 
 RUN apt-get update
-RUN pip install --upgrade pip
-RUN apt-get install -y nvidia-container-toolkit-base
+#RUN apt-get install -y nvidia-container-toolkit-base
 RUN apt-get install -y ffmpeg
-
+RUN apt-get install pip -y
+RUN apt-get install git -y
+RUN pip install --upgrade pip
 
 RUN git clone https://github.com/facefusion/facefusion.git --branch $FACEFUSION_VERSION .
 RUN curl -o requirements-docker.cuda.txt https://raw.githubusercontent.com/facefusion/facefusion-docker/master/requirements-docker.cuda.txt
