--- a/Dockerfile.cuda
+++ b/Dockerfile.cuda
@@ -14,6 +14,6 @@ RUN apt-get install git -y
 RUN pip install --upgrade pip
 
 RUN git clone https://github.com/facefusion/facefusion.git --branch $FACEFUSION_VERSION .
-
+RUN python install.py --onnxruntime cuda
 RUN curl -o requirements-docker.cuda.txt https://raw.githubusercontent.com/facefusion/facefusion-docker/master/requirements-docker.cuda.txt
 RUN pip install -r requirements-docker.cuda.txt
