--- a/requirements-docker.cuda.txt
+++ b/requirements-docker.cuda.txt
@@ -7,9 +7,9 @@ onnx
 onnxruntime-gpu
 opencv-python
 opennsfw2
-#pillow
-#protobuf
-#psutil
-#realesrgan
-#tensorflow
-#tqdm
+pillow
+protobuf
+psutil
+realesrgan
+tensorflow
+tqdm
